# dummy-cpp-lambda-function

./: CMakeLists.txt  build.sh  template.yaml
include/lambda/: context.hpp
src/: main.cpp
